force-app/main/default/objects/Application__c/fields/Reassign_Keterangan_Credit_Factory__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Keterangan_Credit_Factory__c</fullName>
    <label>Reassign Keterangan Credit Factory</label>
    <type>TextArea</type>
</CustomField>