force-app/main/default/objects/Application__c/fields/Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name__c</fullName>
    <formula>Lead__r.First_Loan_Referral_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Name</label>
    <type>Text</type>
</CustomField>