force-app/main/default/objects/Application__c/fields/Referral_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name_Formula__c</fullName>
    <formula>&apos;Referral Name&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Name</label>
    <type>Text</type>
</CustomField>