force-app/main/default/objects/Application__c/fields/RefHistory_Loan__c.field-meta.xml
<CustomField>
    <fullName>RefHistory_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RefHistory_Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications Review (RefHistory_Loan)</relationshipLabel>
    <relationshipName>Applications_Review1</relationshipName>
    <type>Lookup</type>
</CustomField>