force-app/main/default/objects/Application__c/fields/Return_on_Equity_ROE_Formula__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Equity_ROE_Formula__c</fullName>
    <formula>( Laba_Rugi_setelah_Pajak_Formula__c /  Total_Modal__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return on Equity (ROE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>