force-app/main/default/objects/Application__c/fields/Review_Hasil_Analisa__c.field-meta.xml
<CustomField>
    <fullName>Review_Hasil_Analisa__c</fullName>
    <label>Review Hasil Analisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>