force-app/main/default/objects/Application__c/fields/Selisih_LB_antara_Fisik_dan_Bangunan__c.field-meta.xml
<CustomField>
    <fullName>Selisih_LB_antara_Fisik_dan_Bangunan__c</fullName>
    <label>Selisih LB antara Fisik dan Bangunan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>