force-app/main/default/objects/Application__c/fields/Sertipikat_Atas_Nama__c.field-meta.xml
<CustomField>
    <fullName>Sertipikat_Atas_Nama__c</fullName>
    <formula>&quot;a&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Del] Sertipikat Atas Nama</label>
    <type>Text</type>
</CustomField>