force-app/main/default/objects/Application__c/fields/Sertipikat_Number__c.field-meta.xml
<CustomField>
    <fullName>Sertipikat_Number__c</fullName>
    <formula>Loan_Information__r.Sertifikat_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sertipikat Number</label>
    <type>Text</type>
</CustomField>