force-app/main/default/objects/Application__c/fields/Sertipikat_Type__c.field-meta.xml
<CustomField>
    <fullName>Sertipikat_Type__c</fullName>
    <formula>&quot;Type&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sertipikat Type</label>
    <type>Text</type>
</CustomField>