force-app/main/default/objects/Application__c/fields/Source_Income__c.field-meta.xml
<CustomField>
    <fullName>Source_Income__c</fullName>
    <label>Source Income</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Income</fullName>
            </value>
            <value>
                <fullName>Double Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>