force-app/main/default/objects/Application__c/fields/SPAJK_Action__c.field-meta.xml
<CustomField>
    <fullName>SPAJK_Action__c</fullName>
    <label>SPAJK Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>