force-app/main/default/objects/Application__c/fields/SPAJK_Approval_ID__c.field-meta.xml
<CustomField>
    <fullName>SPAJK_Approval_ID__c</fullName>
    <label>SPAJK Approval ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>