force-app/main/default/objects/Application__c/fields/SPAJK_Cover_Note_Expired_At__c.field-meta.xml
<CustomField>
    <fullName>SPAJK_Cover_Note_Expired_At__c</fullName>
    <label>SPAJK Cover Note Expired At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>