force-app/main/default/objects/Application__c/fields/SPAJK_INSCO_Feedback_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>SPAJK_INSCO_Feedback_Document_ID__c</fullName>
    <label>SPAJK INSCO Feedback Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>