force-app/main/default/objects/Application__c/fields/SPAJK_Life_Calculation_ID__c.field-meta.xml
<CustomField>
    <fullName>SPAJK_Life_Calculation_ID__c</fullName>
    <label>SPAJK Life Calculation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>