force-app/main/default/objects/Application__c/fields/Special_notes_for_Appaisal_KJPP__c.field-meta.xml
<CustomField>
    <fullName>Special_notes_for_Appaisal_KJPP__c</fullName>
    <label>Special notes for Appaisal KJPP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>