force-app/main/default/objects/Application__c/fields/Spouse_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Spouse_ID_Number__c</fullName>
    <formula>&quot;Spouse_ID_Number&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse ID Number</label>
    <type>Text</type>
</CustomField>