force-app/main/default/objects/Application__c/fields/Spouse_NPWP__c.field-meta.xml
<CustomField>
    <fullName>Spouse_NPWP__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse NPWP</label>
    <type>Text</type>
</CustomField>