force-app/main/default/objects/Application__c/fields/SPPKP__c.field-meta.xml
<CustomField>
    <fullName>SPPKP__c</fullName>
    <label>SPPKP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>