force-app/main/default/objects/Application__c/fields/Spv_AO__c.field-meta.xml
<CustomField>
    <fullName>Spv_AO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spv AO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_Review_Spv_AO</relationshipName>
    <type>Lookup</type>
</CustomField>