force-app/main/default/objects/Application__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>