force-app/main/default/objects/Application__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>