force-app/main/default/objects/Application__c/fields/Tanggal_Restrukturisasi_Akhir__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Restrukturisasi_Akhir__c</fullName>
    <label>Tanggal Restrukturisasi Akhir</label>
    <type>DateTime</type>
</CustomField>