force-app/main/default/objects/Application__c/fields/Tanggal_surat_ukur__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_surat_ukur__c</fullName>
    <label>Tanggal surat ukur</label>
    <type>Date</type>
</CustomField>