force-app/main/default/objects/Application__c/fields/Temp_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Temp_Exposure__c</fullName>
    <label>Temp Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>