force-app/main/default/objects/Application__c/fields/Temp_NTF_Pengajuan__c.field-meta.xml
<CustomField>
    <fullName>Temp_NTF_Pengajuan__c</fullName>
    <label>Temp_NTF_Pengajuan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>