force-app/main/default/objects/Application__c/fields/Terdapat_Informasi_Negatif__c.field-meta.xml
<CustomField>
    <fullName>Terdapat_Informasi_Negatif__c</fullName>
    <label>Terdapat Informasi Negatif</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ada</fullName>
            </value>
            <value>
                <fullName>Tidak Ada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>