force-app/main/default/objects/Application__c/fields/Total_Angsuran_Existing__c.field-meta.xml
<CustomField>
    <fullName>Total_Angsuran_Existing__c</fullName>
    <label>Total Angsuran Existing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>