force-app/main/default/objects/Application__c/fields/Total_Aset_Lancar_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Aset_Lancar_Formula__c</fullName>
    <formula>Kas_Bank_atau_Setara_Kas__c +  Piutang_Usaha_Dagang__c + Piutang_Lain_Lain__c +  Persediaan__c +  Perlengkapan__c +  Biaya_dibayar_dimuka__c + Aset_Lancar_Lainnya__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Aset Lancar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>