force-app/main/default/objects/Application__c/fields/Total_Aset_Tidak_Lancar_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Aset_Tidak_Lancar_Formula__c</fullName>
    <formula>Tanah__c + Gedung__c + Akumulasi_Penyusutan_Gedung__c + Kendaraan__c + Akumulasi_Penyusutan_Kendaraan__c + Peralatan_dan_Machine__c + Akumulasi_Penyusutan_Peralatan_Mesin__c +  Asset_Tidak_Lancar_Lainnya__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Aset Tidak Lancar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>