force-app/main/default/objects/Application__c/fields/Total_Hutang_dan_Modal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Hutang_dan_Modal_Formula__c</fullName>
    <formula>Total_Hutang_Jangka_Panjang_Formula__c +  Total_Hutang_Jangka_Pendek_Formula__c +  Total_Modal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hutang dan Modal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>