force-app/main/default/objects/Application__c/fields/Total_Hutang_Jangka_Panjang_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Hutang_Jangka_Panjang_Formula__c</fullName>
    <formula>Hutang_Bank_Jangka_Panjang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hutang Jangka Panjang</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>