force-app/main/default/objects/Application__c/fields/Total_Hutang_Jangka_Pendek_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Hutang_Jangka_Pendek_Formula__c</fullName>
    <formula>Hutang_Dagang_Usaha__c +  Hutang_Pajak__c +  Hutang_Gaji__c +  Hutang_Bank_Jangka_Pendek__c +  Biaya_yang_masih_harus_dibayar__c +  Hutang_Jangka_pendek_lainnya__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hutang Jangka Pendek</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>