force-app/main/default/objects/Application__c/fields/Total_Income_Deb_Pasangan_Other_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_Deb_Pasangan_Other_Formula__c</fullName>
    <formula>&apos;Total Income ( Deb + Pasangan + Other)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Income ( Deb + Pasangan + Other)</label>
    <type>Text</type>
</CustomField>