force-app/main/default/objects/Application__c/fields/Total_Obligasi_Aktif__c.field-meta.xml
<CustomField>
    <fullName>Total_Obligasi_Aktif__c</fullName>
    <label>Total Obligasi Aktif</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>