force-app/main/default/objects/Application__c/fields/Total_Obligasi_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Obligasi_Formula__c</fullName>
    <formula>&apos;Total Obligasi&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Obligasi</label>
    <type>Text</type>
</CustomField>