force-app/main/default/objects/Application__c/fields/VA_Amount__c.field-meta.xml
<CustomField>
    <fullName>VA_Amount__c</fullName>
    <label>VA Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>