force-app/main/default/objects/Application__c/fields/VA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>VA_Expiry_Date__c</fullName>
    <label>VA Expiry Date</label>
    <type>DateTime</type>
</CustomField>