force-app/main/default/objects/Application__c/fields/VA_Number_2__c.field-meta.xml
<CustomField>
    <fullName>VA_Number_2__c</fullName>
    <label>Virtual Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>