force-app/main/default/objects/Application__c/fields/VA_Paid_VAN__c.field-meta.xml
<CustomField>
    <fullName>VA_Paid_VAN__c</fullName>
    <label>VA Paid VAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>