force-app/main/default/objects/Application__c/fields/VA_Status__c.field-meta.xml
<CustomField>
    <fullName>VA_Status__c</fullName>
    <label>VA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>