force-app/main/default/objects/Application__c/fields/Virtual_Account_Bank_1__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_Bank_1__c</fullName>
    <label>Virtual Account Bank 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>