force-app/main/default/objects/Application__c/fields/Virtual_Account_Bank_2__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_Bank_2__c</fullName>
    <label>Virtual Account Bank 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>