force-app/main/default/objects/Application__c/fields/Working_Capital_Turn_Over_Formula__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital_Turn_Over_Formula__c</fullName>
    <formula>Pendapatan_Penjualan__c / ( Total_Aset_Lancar_Formula__c -  Total_Hutang_Jangka_Pendek_Formula__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Capital Turn Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>