force-app/main/default/objects/Application__c/fields/Worst_Collectability_Credit_by_Pefindo__c.field-meta.xml
<CustomField>
    <fullName>Worst_Collectability_Credit_by_Pefindo__c</fullName>
    <label>Worst Collectability Credit by Pefindo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kol 1</fullName>
            </value>
            <value>
                <fullName>Kol 2</fullName>
            </value>
            <value>
                <fullName>Kol 3</fullName>
            </value>
            <value>
                <fullName>Kol 4</fullName>
            </value>
            <value>
                <fullName>Kol 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>